src/styles/global.css
:root {
  color-scheme: light dark;
}

html {
  color-scheme: light;
  scroll-behavior: smooth;
}

html.dark {
  color-scheme: dark;
}
body {
  background-color: var(--white);
  overflow-x: hidden;
  transition:
    background-color 0.35s ease,
    color 0.35s ease;
}

html.dark body {
  background-color: var(--black);
}

main {
  min-height: 100vh;
  width: min(1200px, calc(100% - 2rem));
  margin-inline: auto;
  position: relative;
  z-index: 1;
}

